--- a/indice.html
+++ b/indice.html
@@ -1,7 +1,9 @@
 <html>
     <head>
+	<link rel="stylesheet" href= "estilo.css">
     </head>
     <body>
 	<h1>Projeto do Thiago</h1>
+	<h2>Trabalhando em Equipe com Controle e Segurança</h2>
     </body>
 </html>
