--- a/indice.html
+++ b/indice.html
@@ -4,6 +4,7 @@
     </head>
     <body>
 	<h1>Projeto do Thiago</h1>
+	<h1>teste</h1>
 	<h2>Trabalhando em Equipe com Controle e Segurança</h2>
     </body>
 </html>
