Implementando novas paginas

--- a/indice.html
+++ b/indice.html
@@ -1,7 +1,11 @@
 <html>
     <head>
+	<link rel="stylesheet" href="estilo.css"
     </head>
     <body>
 	<h1>Projeto do Thiago</h1>
+	<main>
+	Isso aqui é conteudo da page
+	</main	>
     </body>
-</html>
+</html># novo-site
